# learnopengl

./: .clang-format  .gitignore  CMakeLists.txt  hot-reload.json  valgrind_output.txt
app/: CMakeLists.txt  main.cpp
app/application/: CMakeLists.txt  application.cpp  application.h
app/main/: CMakeLists.txt  main.cpp
configured/: CMakeLists.txt  config.hpp.in
shaders/: fragment_shader.glsl
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  glfw_backend.cpp  glfw_backend.h
src/hot_reload/: CMakeLists.txt
src/shader/: CMakeLists.txt  shader.cpp  shader.h  shader_program.cpp  shader_program.h
